[package]
name = "PA-MOD-MON"
version = "0.1.0"
edition = "2021"

[dependencies]
scrap = { version = "0.5.0", optional = true}
image = { version = "0.24.9", optional = true}
xcap = { version = "0.0.4", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"

[features]
libraries_windows = ["dep:scrap", "dep:image"]
libraries_linux = ["dep:xcap"]
