[package]
name = "PA-MOD-PIC"
version = "0.1.0"
edition = "2021"

[dependencies]
rscam = { version = "0.5.5", optional = true}
camera_capture = {version = "0.5.0" , optional = true}
image = { version = "0.24.9", optional = true}

[features]
camera_windows = ["dep:camera_capture", "dep:image"]
camera_linux = ["dep:rscam"]