[package]
name = "PA-MOD-REC"
version = "0.1.0"
edition = "2021"

[dependencies]
xcap = { version = "0.0.4", optional = true}
cpal = { version = "0.15.2", optional = true}
hound = { version = "3.5.1", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"

[features]
libraries = ["dep:xcap", "dep:cpal", "dep:hound"]