[package]
name = "PA-MOD-REC"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true 
opt-level = "z"
lto = true

[dependencies]
xcap = { version = "0.0.4", optional = true}
cpal = { version = "0.15.2", optional = true}
clap = { version = "3.2", optional = true}
hound = { version = "3.5.1", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"

[features]
libraries = ["dep:xcap", "dep:cpal", "dep:hound", "dep:clap"]

